--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                <li> <a href="#" class="jq--scroll-photo-gallery">Fotogalerie</a></li>
                <li> <a href="#" class="jq--scroll-contact-form">Kontakt</a></li>
            </ul>
+           
+           <div class="mobile-nav-back"></div>
+               <a class="mobile-nav-icon jq--nav-icon"><img class="jq--image-hamburger" src="images/hamburgerMenu.png" alt=""></a>
        </nav>
        </div>
        
