--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                <form action="" class="contact-form row">
                    <input type="text" placeholder="Jméno"><br>
                    <input type="text" placeholder="Příjmení"><br>
-                   <input type="mail" placeholder="Email"><br>
+                   <input type="email" placeholder="Email"><br>
                    <input type="text" placeholder="Telefon"><br>
                    <textarea name="" id="" cols="30" rows="10" placeholder="Text Vaší zprávy"></textarea><br>
                    <input type="submit" value="Odeslat">
