--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
                </div>
                
                <form action="" class="contact-form row">
-                   <input type="text" placeholder="Jméno"><br>
-                   <input type="text" placeholder="Příjmení"><br>
-                   <input type="email" placeholder="Email"><br>
-                   <input type="text" placeholder="Telefon"><br>
-                   <textarea name="" id="" cols="30" rows="10" placeholder="Text Vaší zprávy"></textarea><br>
+                   <input type="text" placeholder="Jméno">
+                   <input type="text" placeholder="Příjmení">
+                   <input type="email" placeholder="Email">
+                   <input type="text" placeholder="Telefon">
+                   <textarea name="" id="" cols="30" rows="10" placeholder="Text Vaší zprávy"></textarea>
                    <input type="submit" value="Odeslat">
                </form>
           </section>
